--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
 :root {
     --dark: #1e201f;
     --white: #fefefe;
-    --primary:#1eab90;
-    --gray:#b0b8b8;
+    --primary: #1eab90;
+    --gray: #b0b8b8;
 }
 
 html,
@@ -10,8 +10,19 @@ body {
     background-color: var(--dark);
 }
 
+#particles-js {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+}
+
 .burger-container {
-    position: inherit;
+    position: fixed;
     z-index: 1001;
     display: inline-block;
     cursor: pointer;
@@ -55,26 +66,24 @@ body {
 }
 
 .animSlider {
-    display: none;
+    position: absolute;
+    z-index: 1002;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     background: var(--primary);
+    display: none;
 }
 
 .animSlider.slideInLeft {
     -webkit-animation-name: slideInLeft;
     animation-name: slideInLeft;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
+    -webkit-animation-duration: .7s;
+    animation-duration: .7s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
     display: block;
-}
-
-.animSlider.hide {
-    display: none;
 }
 
 @-webkit-keyframes slideInLeft {
@@ -82,12 +91,14 @@ body {
         -webkit-transform: translateX(-100%);
         transform: translateX(-100%);
         visibility: visible;
+        display: block;
     }
 
     50% {
         -webkit-transform: translateX(0);
         transform: translateX(0);
     }
+
     90% {
         opacity: 1;
     }
@@ -104,12 +115,14 @@ body {
         -webkit-transform: translateX(-100%);
         transform: translateX(-100%);
         visibility: visible;
+        display: block;
     }
 
     50% {
         -webkit-transform: translateX(0);
         transform: translateX(0);
     }
+
     90% {
         opacity: 1;
     }
@@ -120,8 +133,8 @@ body {
         transform: translate3d(100%, 0, 0);
     }
 }
-.navOverlay
-{
+
+.navOverlay {
     position: fixed;
     bottom: 0;
     right: 0;
@@ -129,4 +142,102 @@ body {
     top: 0;
     z-index: 100;
     background: var(--dark);
+    display: none;
+    height: 100vh;
+    width: 100vw;
+}
+
+.overlay-content {
+    position: relative;
+    top: 25%;
+    /* 25% from the top */
+    width: 100%;
+    /* 100% width */
+    text-align: center;
+    /* Centered text/links */
+    margin-top: 30px;
+    /* 30px top margin to avoid conflict with the close button on smaller screens */
+}
+.overlay-content a {
+    text-decoration: none;
+    color: #ffff;
+    display: block; /* Display block instead of inline */
+    transition: 0.3s; /* Transition effects on hover (color) */
+    padding: 10px;
+    font-size: 30px;
+    opacity: .7;
+    font-weight: 600;
+  }
+
+.navOverlay.fadeInDown {
+    -webkit-animation-name: fadeInDown;
+    animation-name: fadeInDown;
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    display: block;
+}
+
+@-webkit-keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+@keyframes fadeInDown {
+    0% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+    }
+}
+
+.navOverlay.fadeOutUp {
+    -webkit-animation-name: fadeOutUp;
+    animation-name: fadeOutUp;
+    -webkit-animation-duration: 500ms;
+    animation-duration: 500ms;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeOutUp {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+        display: none;
+    }
+}
+
+@keyframes fadeOutUp {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translate3d(0, -100%, 0);
+        transform: translate3d(0, -100%, 0);
+        display: none;
+    }
 }
