--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 :root {
-    --dark: #1e201f;
+    --black:#000;
+    --dark: #212529;
     --white: #fefefe;
     --primary: #1eab90;
     --gray: #b0b8b8;
@@ -7,9 +8,19 @@
 
 html,
 body {
-    background-color: var(--dark);
+    background-color: var(--black);
 }
-
+.text-gray
+{
+    color:var(--gray)!important;
+}
+main
+{
+    position: relative;
+    z-index:2;
+    background-color: rgba(254, 254, 254,0.1);
+    height: 100vh;
+}
 #particles-js {
     height: 100vh;
     width: 100vw;
@@ -18,11 +29,12 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 0;
+    z-index: 1;
+    background-color: var(--black);
 }
 
 .burger-container {
-    position: fixed;
+    position: inherit;
     z-index: 1001;
     display: inline-block;
     cursor: pointer;
@@ -141,7 +153,7 @@ body {
     left: 0;
     top: 0;
     z-index: 100;
-    background: var(--dark);
+    background: var(--black);
     display: none;
     height: 100vh;
     width: 100vw;
@@ -240,4 +252,27 @@ body {
         transform: translate3d(0, -100%, 0);
         display: none;
     }
+}
+.nav-icons{
+    transition: .3s ease;
+}
+.nav-icons:hover
+{
+    color: var(--white) !important;
+}
+.vl {
+    border-left: 6px solid var(--gray);
+  height: 120px;
+  position: relative;
+  left: 50%;
+  margin-left: -3px;
+  top: 0;
+  }
+.sidenav
+{
+    top:30vh;
+}
+.navlink
+{
+    text-transform: uppercase;
 }
